# save_lidar_and_camera

./: CMakeLists.txt  README.md  getImages.cpp  hdl_viewer_simple.cpp  main.cpp
src_py/: main.py  save_camera.py  save_lidar.py
src_py/logs/: lidar.log.2024-11-02
